# Vectis

./: .gitignore  Cargo.toml  README.md  env.dist  pyproject.toml  tests.sh  tests_cargo-fuzz.sh
Doc/: API.md  ENV.md
charts/vectis/: Chart.yaml  README.md  values.yaml
charts/vectis/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
demo/: .gitignore  README.md  clinical_app.py  configure-routes.sh  create-keys.sh  setup.sh  start-app-b.sh  start-vectis-a.sh  start-vectis-b.sh
demo/local/: .gitignore  README.md  configure-config.sh  create-keys.sh  personaldata.json  run-demo.py  setup.sh  start-vectis.sh
demo/message/: README.md  clinical_app.py  configure-routes.sh  create-keys.sh  setup.sh  start-app-a.sh
doc/: API.md  CLI.md  Clustering.md  Design.md  ENV.md  HA_DR.md  Internal.md  Reference.md  Test.md  ThreatModel.md  UseCases.md  openapi.yaml
doc/runbooks/: Common.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  fuzz_canonical_json.rs  fuzz_config_file.rs  fuzz_fpe_inputs.rs  fuzz_keys_inputs.rs  fuzz_mac_index_inputs.rs  fuzz_masking_commitment_inputs.rs  fuzz_message_inputs.rs  fuzz_routes_permissions.rs  fuzz_sharing_inputs.rs  fuzz_sign_input.rs  fuzz_timestamp_token.rs  fuzz_tokenization_inputs.rs  fuzz_validation.rs  input_common.rs
fuzz/seeds/fuzz_canonical_json/: nested.json
fuzz/seeds/fuzz_config_file/: empty.json
fuzz/seeds/fuzz_fpe_inputs/: decrypt.json  decrypt_batch.json  encrypt.json  encrypt_batch.json
fuzz/seeds/fuzz_keys_inputs/: valid.json
fuzz/seeds/fuzz_mac_index_inputs/: index_create.json  index_create_batch.json  index_verify.json  index_verify_batch.json  mac_create.json  mac_create_batch.json  mac_verify.json  mac_verify_batch.json
fuzz/seeds/fuzz_masking_commitment_inputs/: commit_create.json  commit_create_batch.json  commit_verify.json  commit_verify_batch.json  mask.json  mask_batch.json
fuzz/seeds/fuzz_message_inputs/: envelope.json
fuzz/seeds/fuzz_routes_permissions/: routes.json
fuzz/seeds/fuzz_sharing_inputs/: combine.json  split.json
fuzz/seeds/fuzz_sign_input/: valid.json
fuzz/seeds/fuzz_timestamp_token/: valid.json
fuzz/seeds/fuzz_tokenization_inputs/: decode.json  decode_batch.json  encode.json  encode_batch.json
fuzz/seeds/fuzz_validation/: labels.txt  profile-name.txt  text.txt
image/: Dockerfile  Dockerfile.dev  Dockerfile.dockerignore
src/: error.rs  lib.rs  main.rs
src/core/: audit.rs  blocking.rs  canonical.rs  commitments.rs  config.rs  config_file.rs  crypto.rs  fpe.rs  http_client.rs  logging.rs  mac.rs  masking.rs  metrics.rs  mod.rs  permissions.rs  protocol.rs  remote_routes.rs  routes.rs  sensitive.rs  sharing.rs  tokenization.rs  unseal.rs  validation.rs
src/core/storage/: mod.rs  postgres.rs  sqlite.rs
src/db/: data_init.sh  data_schema.sql  postgres_schema.sql  sqlite_schema.sql
src/io/cli/: apikey.rs  config_editor.rs  help_catalog.rs  http.rs  init.rs  mod.rs  sensitive.rs  test.rs  version.rs
src/io/http/: app.rs  auth.rs  commitments.rs  config.rs  error.rs  extract.rs  fpe.rs  health.rs  indexes.rs  keys.rs  mac.rs  masking.rs  message.rs  metrics.rs  middleware.rs  mod.rs  permissions.rs  pubkey.rs  remote_routes.rs  routes.rs  sharing.rs  sign.rs  test.rs  token.rs
src/ops/: apikey.rs  batch.rs  commitments.rs  contracts.rs  fpe.rs  indexes.rs  init.rs  internal_keys.rs  json.rs  key_material.rs  key_validation.rs  keys.rs  mac.rs  masking.rs  message.rs  mod.rs  pubkey.rs  sharing.rs  sign.rs  test.rs  tokenization.rs
tests/: cli_all.py  cli_init.py  cli_negative.py  cli_positive.py  cli_support.py  crypto_integration.rs  final_app_server.py  http_all.py  http_fuzz.py  http_negative.py  http_positive.py  http_schemathesis.py  http_support.py  test_config.py
tests/performance/: k6.js
