[package]
name = "vectis"
version = "0.1.0"
edition = "2024"

[dependencies]
addr = "0.15.6"
artbox = "0.3.0"
axum = "0.8.8"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
botan = { version = "0.13.0", features = ["vendored"] }
hex = "0.4.3"
rpassword = "7.5.4"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
zeroize = "1.9.0"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[dev-dependencies]
proptest = "1.6"
