[package]
name = "vectis-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.vectis]
path = ".."

[[bin]]
name = "fuzz_canonical_json"
path = "fuzz_targets/fuzz_canonical_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sign_input"
path = "fuzz_targets/fuzz_sign_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_timestamp_token"
path = "fuzz_targets/fuzz_timestamp_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_message_inputs"
path = "fuzz_targets/fuzz_message_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config_file"
path = "fuzz_targets/fuzz_config_file.rs"
test = false
doc = false
bench = false
