[package]
name = "vectis-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
zeroize = "1.9.0"

[dependencies.vectis]
path = ".."

[[bin]]
name = "fuzz_canonical_json"
path = "fuzz_targets/fuzz_canonical_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sign_input"
path = "fuzz_targets/fuzz_sign_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_timestamp_token"
path = "fuzz_targets/fuzz_timestamp_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_message_inputs"
path = "fuzz_targets/fuzz_message_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config_file"
path = "fuzz_targets/fuzz_config_file.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_keys_inputs"
path = "fuzz_targets/fuzz_keys_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_routes_permissions"
path = "fuzz_targets/fuzz_routes_permissions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fpe_inputs"
path = "fuzz_targets/fuzz_fpe_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tokenization_inputs"
path = "fuzz_targets/fuzz_tokenization_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mac_index_inputs"
path = "fuzz_targets/fuzz_mac_index_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_masking_commitment_inputs"
path = "fuzz_targets/fuzz_masking_commitment_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sharing_inputs"
path = "fuzz_targets/fuzz_sharing_inputs.rs"
test = false
doc = false
bench = false
